fix(datepicker): Fix display issues on mobile - FRONT-3174

--- a/src/implementations/vanilla/components/datepicker/_datepicker.scss
+++ b/src/implementations/vanilla/components/datepicker/_datepicker.scss
@@ -152,6 +152,7 @@ $_picker-theme-color: null !default;
 
     thead {
       background-color: transparent;
+      display: table-header-group;
     }
 
     th {
@@ -163,7 +164,12 @@ $_picker-theme-color: null !default;
 
     td {
       border-width: 0;
+      display: table-cell;
       padding: 0;
+
+      &::before {
+        content: initial;
+      }
     }
 
     abbr {
